syntax = "proto3";

option java_multiple_files = true;
// Class that will contain descriptor
option java_outer_classname = "ContractServiceProto";
// the Protobuf package
package contractservice.api;
// The package where the generated classes will reside
option java_package = "nl.jdriven.blogs.svc.contract.proto";
// import some well-known types from google
import "google/type/money.proto";

service ContractService {
    rpc newQuote (NewQuoteRequest) returns (NewQuoteResponse);
    rpc promoteQuote (PromoteQuoteRequest) returns (PromoteQuoteResponse);
    rpc addWorkDone (AddWorkDoneRequest) returns (AddWorkDoneResponse);
    rpc finalizeContract (FinalizeContractRequest) returns (FinalizeContractResponse);
    rpc findContracts(FindContractsRequest) returns (FindContractsResponse);
}

message NewQuoteRequest {
    Options options = 1;
    string fullNameOfParticipant = 11;
    google.type.Money quotedPrice = 12;
    string descriptionOfWorkRequested = 13;
}

message NewQuoteResponse {
    Status status = 1;
    ContractId quoteId = 11;
}

message PromoteQuoteRequest {
    ContractId contractId = 11;
}

message PromoteQuoteResponse {
    Status status = 11;
}

message AddWorkDoneRequest {
    ContractId contractId = 11;
    WorkDone work = 12;
}

message AddWorkDoneResponse {
    Status status = 11;
}

message FinalizeContractRequest {
    ContractId contractId = 11;
}

message FinalizeContractResponse {
    Status status = 11;
    google.type.Money profitMade = 12;
}

message FindContractsRequest {
    Options options = 1;
    repeated ContractId contractId = 11;
    BoolOption includeQuotes = 12;
    BoolOption includeWorking = 13;
    BoolOption includeFinalized = 14;
}

message FindContractsResponse {
    Status status = 11;
    repeated Contract contracts = 12;
}

/*** All Model definitions follows below ****/
message Contract {
    ContractId contractId = 11;
    Quote quote = 12;
    repeated WorkDone work = 13;
    string status = 14;
}

message ContractId {
    string id = 1;
}

message Quote {
    string fullNameOfParticipant = 1;
    google.type.Money quotedPrice = 2;
    string descriptionOfWorkRequested = 3;
}

message WorkDone {
    google.type.Money costOfWork = 1;
    string descriptionOfWorkDone = 2;
}

message Status {
    Statuscode status = 1;
    string reason = 2;
    repeated Error errors = 3;
}

message Error {
    string errorCode = 1;
    string location = 2;
    repeated string args = 3;
}

message Options {
    repeated OptionAttr optionAttributes = 4;
    string included = 2;  // comma-separated list of response parts that should be included, using this means other parts are excluded
}

message OptionAttr {
    string name = 1;
    string value = 2;
}

enum Statuscode {
    UNKNOWN = 0;
    OK = 1;
    FAILED = 2;
    NOTFOUND = 3;
}

enum BoolOption {
    UNDEF = 0;
    YES = 1;
    NO = 2;
}
